Fixing styles on mobile when input is focused...

--- a/css/styles.css
+++ b/css/styles.css
@@ -1,3 +1,8 @@
+html, body {
+  height:100%;
+  min-height: 100%;
+}
+
 #player_list div {
   cursor: pointer;
   font-size: 125%;
@@ -18,12 +23,12 @@
 	background:white;
 	text-align:center;
 	display: flex;
-	 align-items: center;
+  align-items: center;
   justify-content: center;
 }
 
 #name_form .content {
-	margin-top: -15vh;
+	height:100%;
 }
 
 #player_list {
@@ -67,6 +72,7 @@ button {
 	align-items: center;
   justify-content: center;
   border-radius: 16px;
+  height: 100%;
 }
 
 #inGameMenu button {
